# hexapod

./: .gitignore  README  README.TXT  README.md
docs/: overview.txt  ros_info.txt
docs/brainstorming/: architecture.txt  ideas.txt  movement_controller_ideas.txt  overview.txt  task_list.txt  unit_tests.txt
src/hexapod_interfaces/: CMakeLists.txt  package.xml
src/hexapod_interfaces/action/: LegMotionCommand.action  LegMovementCommand.action  LegStepCommand.action
src/hexapod_interfaces/msg/: FootPosition.msg  LegMovementCommand.msg  LegPosition.msg  LegState.msg
src/hexapod_nodes/: CMakeLists.txt  package.xml
src/hexapod_nodes/launch/: hexapod_launch.py  hexapod_launch.xml
src/hexapod_nodes/rviz/: urdf.rviz
src/hexapod_nodes/src/: gait_controller.cpp  leg_motion_controller.cpp  leg_movement_controller.cpp  leg_position_broadcaster.cpp  leg_servo_controller.cpp  leg_state_broadcaster.cpp  leg_step_controller.cpp  main_movement_controller.cpp
src/hexapod_nodes/urdf/: hexapod.urdf.xacro
src/leg_motion_controller/: CMakeLists.txt  package.xml
src/leg_motion_controller/src/: leg_motion_controller.cpp
